--- a/bsconfig.json
+++ b/bsconfig.json
@@ -7,12 +7,12 @@
   },
   "package-specs": {
     "module": "commonjs",
-    "in-source": true
+    "in-source": false
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
   ],
   "warnings": {
     "error" : "+101"
-  },
+  }
 }
